# cas-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  cas-service.service  catalog-info.yaml  docker-compose.yml  pyproject.toml  update-systemd.sh
.github/workflows/: ci.yml  deploy-self-hosted.yml  notify-pepers-integration.yml  release.yml  sandbox-validate.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
cas_service/: __main__.py  main.py  preprocessing.py
cas_service/engines/: base.py  gap_engine.py  matlab_engine.py  maxima_engine.py  sage_engine.py  sympy_engine.py  wolframalpha_engine.py
cas_service/runtime/: executor.py
cas_service/setup/: __init__.py  _config.py  _gap.py  _matlab.py  _maxima.py  _python.py  _runner.py  _sage.py  _service.py  _sympy.py  _verify.py  _wolframalpha.py  main.py
docs/: CROSSCHECK_2026-02-25.md  FINAL_REPO_HANDOFF_2026-02-24.md  MS-X-VERIFICATION-SSOT.md
docs/milestones/: MS-X-advanced-cas-compute-gsd.md  MS-Y-sage-production-wizard-upgrade.md
scripts/: cas_service_start.sh
tests/: test_compute_api.py  test_docker_cutover_ready.py  test_gap_engine.py  test_main_coverage.py  test_matlab_coverage.py  test_matlab_engine.py  test_preprocessing.py  test_runtime_executor.py  test_sage_engine.py  test_setup_config.py  test_setup_sage.py  test_setup_service_extra.py  test_setup_verify_smoke.py  test_setup_wizard.py  test_setup_wolframalpha.py  test_sympy_engine.py  test_wolframalpha_engine.py
