[project]
name = "cas-service"
version = "0.1.0"
description = "CAS microservice with SymPy + Maxima engines"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
    "antlr4-python3-runtime==4.11.1",
]

[project.scripts]
cas-setup = "cas_service.setup.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
setup = [
    "questionary>=2.0",
    "rich>=13.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
