[project]
name = "cas-service"
version = "0.1.0"
description = "Multi-engine CAS microservice — Sage, SymPy, MATLAB, WolframAlpha"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.13",
    "antlr4-python3-runtime==4.11.1",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
cas-setup = "cas_service.setup.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
setup = [
    # Compatibility alias: setup wizard deps are now core dependencies.
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
build_command = ""
